tests/baselines/reference/objectLiteralFunctionArgContextualTyping.errors.txt
==== tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts (7 errors) ====
    interface I {
        value: string;
        toString: (t: string) => string;
    }
    
    function f2(args: I) { }
    
    f2({ hello: 1 }) // error 
    ~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type '{ hello: number; }' is missing property 'value' from type 'I'.
    ~~
!!! error TS2087: Could not select overload for 'call' expression.
    f2({ value: '' }) // missing toString satisfied by Object's member
    f2({ value: '', what: 1 }) // missing toString satisfied by Object's member
    f2({ toString: (s) => s }) // error, missing property value from ArgsString
    ~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type '{ toString: (s: string) => string; }' is missing property 'value' from type 'I'.
    ~~
!!! error TS2087: Could not select overload for 'call' expression.
    f2({ toString: (s: string) => s }) // error, missing property value from ArgsString
    ~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type '{ toString: (s: string) => string; }' is missing property 'value' from type 'I'.
    ~~
!!! error TS2087: Could not select overload for 'call' expression.
    f2({ value: '', toString: (s) => s.uhhh }) // error
                                       ~~~~
!!! error TS2094: The property 'uhhh' does not exist on value of type 'string'.